--- a/src/app/list-view/list-view.component.html
+++ b/src/app/list-view/list-view.component.html
@@ -2,78 +2,16 @@
 
 <div class="row">
   <div class="col-sm-6">
-    <div class="form-group">
-      <label for="searchInput" class="sr-only">Search</label>
-      <input type="text" class="form-control" id="searchInput" placeholder="Search...">
-    </div>
+    <sl-search
+     (keyWord)=searchTable($event)></sl-search>
   </div>
   <div class="col-sm-6 text-sm-right">
-    <a href="#" class="btn btn-primary mb-3">Add New</a>
+    <a href="#" class="btn btn-primary mb-3" routerLink="add-character">Add New</a>
   </div>
 </div>
 
-<table class="table table-bordered table-hover">
-  <thead class="thead-light">
-    <tr>
-      <th scope="col">Id</th>
-      <th scope="col">Name</th>
-      <th scope="col">Species</th>
-      <th scope="col">Gender</th>
-      <th scope="col">Homeworld</th>
-      <th scope="col">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Luke Skywalker</td>
-      <td>Human</td>
-      <td>Male</td>
-      <td>Tatooine</td>
-      <td>
-        <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
-          <button type="button" class="btn btn-secondary">
-            <i class="fa fa-pencil" aria-hidden="true"></i> Edit
-          </button>
-          <button type="button" class="btn btn-danger">
-            <i class="fa fa-trash-o" aria-hidden="true"></i> Remove
-          </button>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>R2-D2</td>
-      <td>Droid</td>
-      <td>n/a</td>
-      <td>Naboo</td>
-      <td>
-        <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
-          <button type="button" class="btn btn-secondary">
-            <i class="fa fa-pencil" aria-hidden="true"></i> Edit
-          </button>
-          <button type="button" class="btn btn-danger">
-            <i class="fa fa-trash-o" aria-hidden="true"></i> Remove
-          </button>
-        </div>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<sl-list-table [characters]="currentList"></sl-list-table>
 
-<nav aria-label="Data grid navigation">
-  <ul class="pagination justify-content-end">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1">Previous</a>
-    </li>
-    <li class="page-item active">
-      <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
-    </li>
-    <li class="page-item">
-      <a class="page-link" href="#">2</a>
-    </li>
-    <li class="page-item">
-      <a class="page-link" href="#">Next</a>
-    </li>
-  </ul>
-</nav>
+<sl-pagination
+  [currentData]="forPagination"
+  (anotherPage)="changePage($event)"></sl-pagination>
