--- a/src/app/add-character/add-character.component.scss
+++ b/src/app/add-character/add-character.component.scss
@@ -1,3 +1,22 @@
-.form-control {
-  margin-bottom: 2rem;
+.add-character-form {
+  padding-top: 3rem;
+  label {
+    font-weight: 600;
+    .required {
+      color: #007bff;
+      margin-left: .25rem;
+    }
+  }
+  .radios {
+    height: 2.375rem;
+    display: flex;
+    align-items: center;
+    label {
+      margin-bottom: 0;
+      margin-left: .75rem;
+      &:first-child {
+        margin-left: 0;
+      }
+    }
+  }
 }
